--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
-  "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.13",
-    "socket.io": "^4.3.0"
-  }
+	"name": "basic_chat_socketio",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"dev": "concurrently \"npx tsc --watch\" \"nodemon ./dist/app.js\"",
+		"build": "npx tsc",
+		"prod": "node ./dist/app.js",
+		"start": "node ./dist/app.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@types/express": "^4.17.18",
+		"@types/socket.io": "^3.0.2",
+		"express": "^4.17.1",
+		"socket.io": "^4.3.0"
+	}
 }
